# cdtd_simple

./: README.md  main.ipynb  pyproject.toml
cdtd/: __init__.py
